--- a/Lab#01/index.html
+++ b/Lab#01/index.html
@@ -116,6 +116,14 @@ On 15 August 1947, Quaid-i-Azam was sworn in as the first Governor General of Pa
 	<li style="color: rgb(0, 121, 20);">AML (1)</li>
 
 </ul>
+<audio controls>
+	<source src="horse.ogg" type="audio/ogg">
+	<source src="horse.mp3" type="audio/mpeg">
+</audio>
+<video width="320" height="240" controls>
+	<source src="movie.mp4" type="video/mp4">
+	<source src="movie.ogg" type="video/ogg">
+</video>
 
 
 </body>
